cockroachlabs-preview-main/docs/v23.2/logging-overview.mdx
---
title: "Logging Overview"
old_description: "Overview of the logging system and logging channels."
---

If you need to monitor your cluster, tune performance, or [troubleshoot](/docs/v23.2/troubleshooting-overview) issues, you can check the CockroachDB logs, which include details about notable cluster, node, and range-level events.

## Details

When a node starts, shuts down, or processes a [`cockroach` command](/docs/v23.2/cockroach-commands), it produces a stream of messages about the command's activities. Each message is composed of:

- A payload that contains events either structured in JSON or conveyed in an arbitrary string. For details on structured event types and their fields, see [Notable Event Types](/docs/v23.2/eventlog).
- An envelope that contains event metadata (e.g., severity, date, timestamp, channel). Depending on the log format you specify when [configuring logs](/docs/v23.2/configure-logs#file-logging-format), the envelope can be formatted either in JSON or as a flat prefix to the message.

Messages are organized into appropriate [logging channels](#logging-channels) and then routed through log sinks. Each sink further processes and filters the messages before emitting them to destinations outside CockroachDB. The mapping of channels to sinks, as well as the processing and filtering done by each sink, is configurable and is intended to support multiple [use cases](/docs/v23.2/logging-use-cases). For more information on configuring sinks and severity levels, see [Configure Logs](/docs/v23.2/configure-logs).

<Tip>
All [`cockroach` commands](/docs/v23.2/cockroach-commands) support logging. However, note that most messages related to cluster operation are generated by [`cockroach start`](/docs/v23.2/cockroach-start) or [`cockroach start-single-node`](/docs/v23.2/cockroach-start-single-node). Other commands generate messages related to their own execution, which are mainly useful when troubleshooting the behaviors of those commands.
</Tip>

## Logging channels

Log messages in CockroachDB are directed into logging channels, which can in turn be assigned to output to one or more [log sinks](/docs/v23.2/configure-logs#configure-log-sinks).

This allows you to group channels that log related information (e.g., operational, security, or SQL events) into their own sinks. Each sink can output to a predetermined destination where the logs can be collected and parsed. For usage examples, see [Logging Use Cases](/docs/v23.2/logging-use-cases).

<table><thead><tr><th>Channel</th><th>Description</th></tr></thead><tbody><tr><td><a href="/docs/v23.2/logging#dev"><code>DEV</code></a></td><td>Uncategorized and debug messages.</td></tr><tr><td><a href="/docs/v23.2/logging#ops"><code>OPS</code></a></td><td>Process starts, stops, shutdowns, and crashes (if they can be logged); changes to cluster topology, such as node additions, removals, and decommissions.</td></tr><tr><td><a href="/docs/v23.2/logging#health"><code>HEALTH</code></a></td><td>Resource usage; node-node connection events, including connection errors; up- and down-replication and range unavailability.</td></tr><tr><td><a href="/docs/v23.2/logging#storage"><code>STORAGE</code></a></td><td>Low-level storage logs from the <a href="/docs/v23.2/architecture/storage-layer#pebble">Pebble storage engine</a>.</td></tr><tr><td><a href="/docs/v23.2/logging#sessions"><code>SESSIONS</code></a></td><td>Client connections and disconnections (when enabled via the <code>server.auth&#95;log.sql&#95;connections.enabled</code><a href="/docs/v23.2/cluster-settings">cluster setting</a>); SQL authentication logins/attempts and session/query terminations (when enabled via the <code>server.auth&#95;log.sql&#95;sessions.enabled</code><a href="/docs/v23.2/cluster-settings">cluster setting</a>).</td></tr><tr><td><a href="/docs/v23.2/logging#sql_schema"><code>SQL&#95;SCHEMA</code></a></td><td>Database, schema, table, sequence, view, and type creation; changes to table columns and sequence parameters.</td></tr><tr><td><a href="/docs/v23.2/logging#user_admin"><code>USER&#95;ADMIN</code></a></td><td>Changes to users, roles, and authentication credentials.</td></tr><tr><td><a href="/docs/v23.2/logging#privileges"><code>PRIVILEGES</code></a></td><td>Changes to privileges and object ownership.</td></tr><tr><td><a href="/docs/v23.2/logging#sensitive_access"><code>SENSITIVE&#95;ACCESS</code></a></td><td>SQL audit events (when enabled via <a href="/docs/v23.2/alter-table#experimental_audit"><code>ALTER TABLE ... EXPERIMENTAL&#95;AUDIT</code></a>).</td></tr><tr><td><a href="/docs/v23.2/logging#sql_exec"><code>SQL&#95;EXEC</code></a></td><td>SQL statement executions (when enabled via the <code>sql.trace.log&#95;statement&#95;execute</code><a href="/docs/v23.2/cluster-settings">cluster setting</a>) and uncaught Go panic errors during SQL statement execution.<br/><br/><strong>Warning</strong>: Logging cluster-wide executions by enabling the <code>sql.trace.log&#95;statement&#95;execute</code> cluster setting will incur considerable overhead and may have a negative performance impact.</td></tr><tr><td><a href="/docs/v23.2/logging#sql_perf"><code>SQL&#95;PERF</code></a></td><td>SQL executions that impact performance, such as slow queries (when enabled via the <code>sql.log.slow&#95;query.latency&#95;threshold</code> and/or <code>sql.log.slow&#95;query.experimental&#95;full&#95;table&#95;scans.enabled</code><a href="/docs/v23.2/cluster-settings">cluster settings</a>).</td></tr><tr><td><a href="/docs/v23.2/logging#telemetry"><code>TELEMETRY</code></a></td><td>Telemetry events for internal usage, except for <a href="/docs/v23.2/eventlog#sampled_query"><code>sampled&#95;query</code> events</a> which may be <a href="/docs/v23.2/log-sql-activity-to-datadog">logged externally to Datadog</a>.</td></tr><tr><td><a href="/docs/v23.2/logging#kv_distribution"><code>KV&#95;DISTRIBUTION</code></a></td><td>Data distribution events, such as moving <a href="/docs/v23.2/architecture/overview#architecture-replica">replicas</a> between <a href="/docs/v23.2/cockroach-start#store">stores</a> in a cluster, adding replicas to <a href="/docs/v23.2/architecture/overview#range">ranges</a>, and removing replicas from ranges.</td></tr></tbody></table>

Logging channels are analogous to [logging facilities in Syslog](https://wikipedia.org/wiki/Syslog) or [logging services in Datadog](https://docs.datadoghq.com/logs/log_collection?tab=http#reserved-attributes). For more details on the contents of each logging channel, see the [Logging reference](/docs/v23.2/logging#logging-channels).

## Logging destinations

When using the [default logging configuration](/docs/v23.2/configure-logs#default-logging-configuration), the events collected on each [logging channel](#logging-channels) are split into log files as follows:

<table><thead><tr><th>Filename</th><th>Description</th><th>Channels</th></tr></thead><tbody><tr><td><code>cockroach.log</code></td><td>General CockroachDB log</td><td><code>DEV</code></td></tr><tr><td><code>cockroach-health.log</code></td><td>Health log</td><td><code>HEALTH</code></td></tr><tr><td><code>cockroach-kv-distribution.log</code></td><td>Data distribution log</td><td><code>KV&#95;DISTRIBUTION</code></td></tr><tr><td><code>cockroach-security.log</code></td><td>SQL security log</td><td><code>PRIVILEGES</code> + <code>USER&#95;ADMIN</code></td></tr><tr><td><code>cockroach-sql-audit.log</code></td><td>SQL access audit log</td><td><code>SENSITIVE&#95;ACCESS</code></td></tr><tr><td><code>cockroach-sql-auth.log</code></td><td>SQL authentication log</td><td><code>SESSIONS</code></td></tr><tr><td><code>cockroach-sql-exec.log</code></td><td>SQL execution log</td><td><code>SQL&#95;EXEC</code></td></tr><tr><td><code>cockroach-sql-slow.log</code></td><td>SQL slow query log</td><td><code>SQL&#95;PERF</code></td></tr><tr><td><code>cockroach-sql-schema.log</code></td><td>SQL schema change log</td><td><code>SQL&#95;SCHEMA</code></td></tr><tr><td><code>cockroach-pebble.log</code></td><td>Pebble log</td><td><code>STORAGE</code></td></tr><tr><td><code>cockroach-telemetry.log</code></td><td>Telemetry log</td><td><code>TELEMETRY</code></td></tr></tbody></table>

Logging destinations and many other parameters are configurable via YAML. For details, see [Configure Logs](/docs/v23.2/configure-logs).

## See also

- [Configure logs](/docs/v23.2/configure-logs)
- [Logging Levels and Channels](/docs/v23.2/logging)
- [Log formats](/docs/v23.2/log-formats)
- [Notable Event Types](/docs/v23.2/eventlog)
