cockroachlabs-preview-main/docs/v25.4/logging-overview.mdx
---
title: "Logging Overview"
old_description: "Overview of the logging system and logging channels."
---

import { InlineImage } from "/snippets/InlineImage.jsx";

If you need to monitor your cluster, tune performance, or [troubleshoot](/docs/v25.4/troubleshooting-overview) issues, you can check the CockroachDB logs, which include details about notable cluster, node, and range-level events.

## Details

When a node starts, shuts down, or processes a [`cockroach` command](/docs/v25.4/cockroach-commands), it produces a stream of messages about the command's activities. Each message is composed of:

- A payload that contains events either structured in JSON or conveyed in an arbitrary string. For details on structured event types and their fields, see [Notable Event Types](/docs/v25.4/eventlog).
- An envelope that contains event metadata (e.g., severity, date, timestamp, channel). Depending on the log format you specify when [configuring logs](/docs/v25.4/configure-logs#file-logging-format), the envelope can be formatted either in JSON or as a flat prefix to the message.

Messages are organized into appropriate [logging channels](#logging-channels) and then routed through log sinks. Each sink further processes and filters the messages before emitting them to destinations outside CockroachDB. The mapping of channels to sinks, as well as the processing and filtering done by each sink, is configurable and is intended to support multiple [use cases](/docs/v25.4/logging-use-cases). For more information on configuring sinks and severity levels, see [Configure Logs](/docs/v25.4/configure-logs).

<Tip>
All [`cockroach` commands](/docs/v25.4/cockroach-commands) support logging. However, note that most messages related to cluster operation are generated by [`cockroach start`](/docs/v25.4/cockroach-start) or [`cockroach start-single-node`](/docs/v25.4/cockroach-start-single-node). Other commands generate messages related to their own execution, which are mainly useful when troubleshooting the behaviors of those commands.
</Tip>

## Logging channels

<Note>
Log channels cannot be completely disabled. You can configure [how log messages are routed to different sinks](/docs/v25.4/configure-logs#configure-log-sinks) and [adjust verbosity levels](/docs/v25.4/configure-logs#set-logging-levels), but you cannot turn off a log channel entirely. For example, a channel that **is not explicitly configured** for a [file group](/docs/v25.4/configure-logs#output-to-files) **is enabled** in the `default` file group.
</Note>

Log messages in CockroachDB are directed to logging channels, which can in turn be assigned to output to one or more [log sinks](/docs/v25.4/configure-logs#configure-log-sinks).

This allows you to group channels that log related information (e.g., operational, security, or SQL events) into their own sinks. Each sink can output to a predetermined destination where the logs can be collected and parsed. For usage examples, see [Logging Use Cases](/docs/v25.4/logging-use-cases).

<table><thead><tr><th>Channel</th><th>Description</th></tr></thead><tbody><tr><td><a></a><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v25.4:<a href="/docs/v25.4/logging"><code>CHANGEFEED</code></a></td><td>Changefeed events.<br/><br/><strong>Note</strong>: <a href="/docs/v25.4/eventlog#changefeed-telemetry-events">Changefeed telemetry events</a>, which are sent by default to the <a href="#telemetry"><code>TELEMETRY</code></a> channel in v25.4 and earlier versions, will be routed by default to this channel in a future major release.<br/>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, review the <a href="/docs/v25.4/logging-overview#log-channel_compatibility_mode-enabled"><code>log.channel&#95;compatibility&#95;mode.enabled</code></a> cluster setting. After reviewing the documentation, set <code>log.channel&#95;compatibility&#95;mode.enabled</code> to <code>false</code> in a non-production environment to log these events to this <code>CHANGEFEED</code> channel.</td></tr><tr><td><a href="/docs/v25.4/logging#dev"><code>DEV</code></a></td><td>Uncategorized and debug messages.</td></tr><tr><td><a href="/docs/v25.4/logging#kv_distribution"><code>KV&#95;DISTRIBUTION</code></a></td><td>Data distribution events, such as moving <a href="/docs/v25.4/architecture/overview#architecture-replica">replicas</a> between <a href="/docs/v25.4/cockroach-start#store">stores</a> in a cluster, adding replicas to <a href="/docs/v25.4/architecture/overview#range">ranges</a>, and removing replicas from ranges.</td></tr><tr><td><a></a><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v25.4:<a href="/docs/v25.4/logging"><code>KV&#95;EXEC</code></a></td><td>KV execution events that are not related to distribution.</td></tr><tr><td><a href="/docs/v25.4/logging#health"><code>HEALTH</code></a></td><td>Resource usage; node-node connection events, including connection errors; up- and down-replication and range unavailability.</td></tr><tr><td><a href="/docs/v25.4/logging#ops"><code>OPS</code></a></td><td>Process starts, stops, shutdowns, and crashes (if they can be logged); changes to cluster topology, such as node additions, removals, and decommissions.</td></tr><tr><td><a href="/docs/v25.4/logging#privileges"><code>PRIVILEGES</code></a></td><td>Changes to privileges and object ownership.</td></tr><tr><td><a href="/docs/v25.4/logging#sensitive_access"><code>SENSITIVE&#95;ACCESS</code></a></td><td>SQL audit events (when enabled via <a href="/docs/v25.4/alter-table#experimental_audit"><code>ALTER TABLE ... EXPERIMENTAL&#95;AUDIT</code></a>).</td></tr><tr><td><a href="/docs/v25.4/logging#sessions"><code>SESSIONS</code></a></td><td>Client connections and disconnections (when enabled via the <code>server.auth&#95;log.sql&#95;connections.enabled</code><a href="/docs/v25.4/cluster-settings">cluster setting</a>); SQL authentication logins/attempts and session/query terminations (when enabled via the <code>server.auth&#95;log.sql&#95;sessions.enabled</code><a href="/docs/v25.4/cluster-settings">cluster setting</a>).</td></tr><tr><td><a></a><a href="/docs/v25.4/logging#sql_exec"><code>SQL&#95;EXEC</code></a></td><td>SQL statement executions (when enabled via the <code>sql.trace.log&#95;statement&#95;execute</code><a href="/docs/v25.4/cluster-settings">cluster setting</a>) and uncaught Go panic errors during SQL statement execution.<br/><br/><strong>Warning</strong>: Logging cluster-wide executions by enabling the <code>sql.trace.log&#95;statement&#95;execute</code> cluster setting will incur considerable overhead and may have a negative performance impact.<br/><br/><strong>Note</strong>: In a future release, the following events will be routed to this channel:<br/><br/>- <a href="/docs/v25.4/eventlog#sql-slow-query-log">SQL Slow Query Log</a><br/><br/>- <a href="/docs/v25.4/eventlog#sql-slow-query-log-internal">SQL Slow Query Log (Internal)</a><br/><br/>- <a href="/docs/v25.4/eventlog#sampled_query"><code>sampled&#95;query</code></a><br/><br/>- <a href="/docs/v25.4/eventlog#sampled_transaction"><code>sampled&#95;transaction</code></a><br/><br/>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the <a href="#log-channel_compatibility_mode-enabled"><code>log.channel&#95;compatibility&#95;mode.enabled</code></a> cluster setting to <code>false</code> in a non-production environment. This will log these events to this <code>SQL&#95;EXEC</code> channel.</td></tr><tr><td><a></a><a href="/docs/v25.4/logging#sql_perf"><code>SQL&#95;PERF</code></a></td><td>SQL executions that impact performance, such as slow queries (enabled via the <code>sql.log.slow&#95;query.latency&#95;threshold</code> and <code>sql.log.slow&#95;query.experimental&#95;full&#95;table&#95;scans.enabled</code><a href="/docs/v25.4/cluster-settings">cluster settings</a>).<br/><br/><strong>Note</strong>: The <code>SQL&#95;PERF</code> and <code>SQL&#95;INTERNAL&#95;PERF</code> channels will be removed in a future release. <a href="/docs/v25.4/eventlog#sql-slow-query-log">SQL Slow Query Log</a> and <a href="/docs/v25.4/eventlog#sql-slow-query-log-internal">SQL Slow Query Log (Internal)</a> events currently sent to the <code>SQL&#95;PERF</code> and <a href="/docs/v25.4/logging#sql_internal_perf"><code>SQL&#95;INTERNAL&#95;PERF</code></a> channels, respectively, will be routed to the <a href="#sql_exec"><code>SQL&#95;EXEC</code></a> channel in a future release. Internal queries are tagged as <code>internal</code>, allowing users to filter them out downstream.<br/><br/>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the <a href="#log-channel_compatibility_mode-enabled"><code>log.channel&#95;compatibility&#95;mode.enabled</code></a> cluster setting to <code>false</code> in a non-production environment. This logs these events to the <a href="#sql_exec"><code>SQL&#95;EXEC</code></a> channel.</td></tr><tr><td><a href="/docs/v25.4/logging#sql_schema"><code>SQL&#95;SCHEMA</code></a></td><td>Database, schema, table, sequence, view, and type creation; changes to table columns and sequence parameters.</td></tr><tr><td><a href="/docs/v25.4/logging#storage"><code>STORAGE</code></a></td><td>Low-level storage logs from the <a href="/docs/v25.4/architecture/storage-layer#pebble">Pebble storage engine</a>.</td></tr><tr><td><a></a><a href="/docs/v25.4/logging#telemetry"><code>TELEMETRY</code></a></td><td>Telemetry events for internal usage, except for <a href="/docs/v25.4/eventlog#sampled_query"><code>sampled&#95;query</code></a> and <a href="/docs/v25.4/eventlog#sampled_transaction"><code>sampled&#95;transaction</code></a> events which may be <a href="/docs/v25.4/log-sql-activity-to-datadog">logged externally to Datadog</a>.<br/><br/><strong>Note</strong>: <code>sampled&#95;query</code> and <code>sampled&#95;transaction</code> events, which are sent by default to this channel in v25.4 and earlier versions, will instead be routed by default to the <a href="#sql_exec"><code>SQL&#95;EXEC</code></a> channel in a future major release. <a href="/docs/v25.4/eventlog#changefeed-telemetry-events">Changefeed telemetry events</a>, which are sent by default to this channel in v25.4 and earlier versions, will instead be routed by default to the <a href="#changefeed"><code>CHANGEFEED</code></a> channel in a future major release.<br/>To prepare for these changes and assess potential downstream impacts on your logging setup and pipelines, review the <a href="/docs/v25.4/logging-overview#log-channel_compatibility_mode-enabled"><code>log.channel&#95;compatibility&#95;mode.enabled</code></a> cluster setting. After reviewing the documentation, set <code>log.channel&#95;compatibility&#95;mode.enabled</code> to <code>false</code> in a non-production environment to log these events to their new channels.</td></tr><tr><td><a href="/docs/v25.4/logging#user_admin"><code>USER&#95;ADMIN</code></a></td><td>Changes to users, roles, and authentication credentials.</td></tr></tbody></table>

Logging channels are analogous to [logging facilities in Syslog](https://wikipedia.org/wiki/Syslog) or [logging services in Datadog](https://docs.datadoghq.com/logs/log_collection?tab=http#reserved-attributes). For more details on the contents of each logging channel, see the [Logging reference](/docs/v25.4/logging#logging-channels).

### `log.channel_compatibility_mode.enabled`

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v25.4: The `log.channel_compatibility_mode.enabled` [cluster setting](/docs/v25.4/cluster-settings) controls logging channel behavior. When set to:

- `true` (default): Logs are sent to the standard [logging channels](#logging-channels). This maintains the behavior in v25.3 and earlier supported versions. Specifically, the system sends:
    - [Changefeed telemetry events](/docs/v25.4/eventlog#changefeed-telemetry-events) to the [`TELEMETRY`](#telemetry) channel.
    - [SQL Slow Query Log](/docs/v25.4/eventlog#sql-slow-query-log) and [SQL Slow Query Log (Internal)](/docs/v25.4/eventlog#sql-slow-query-log-internal) events to the [`SQL_PERF`](#sql_perf) and [`SQL_INTERNAL_PERF`](/docs/v25.4/logging#sql_internal_perf) channels, respectively.
    - [`sampled_query`](/docs/v25.4/eventlog#sampled_query) and [`sampled_transaction`](/docs/v25.4/eventlog#sampled_transaction) events to the [`TELEMETRY`](#telemetry) channel.
- `false`: Logs are sent to updated logging channels. Specifically, the system sends:
    - [Changefeed telemetry events](/docs/v25.4/eventlog#changefeed-telemetry-events) to the [`CHANGEFEED`](#changefeed) channel.
    - [SQL Slow Query Log](/docs/v25.4/eventlog#sql-slow-query-log) and [SQL Slow Query Log (Internal)](/docs/v25.4/eventlog#sql-slow-query-log-internal) events to the [`SQL_EXEC`](#sql_exec) channel.
    - [`sampled_query`](/docs/v25.4/eventlog#sampled_query) and [`sampled_transaction`](/docs/v25.4/eventlog#sampled_transaction) events to the [`SQL_EXEC`](#sql_exec) channel.

<Warning>
In a future release, `log.channel_compatibility_mode.enabled` is expected to default to `false`. To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the `log.channel_compatibility_mode.enabled` cluster setting to `false` in a non-production environment.
</Warning>

## Logging destinations

When using the [default logging configuration](/docs/v25.4/configure-logs#default-logging-configuration), the events collected on each [logging channel](#logging-channels) are split into log files as follows:

<table><thead><tr><th>Filename</th><th>Description</th><th>Channels</th></tr></thead><tbody><tr><td><code>cockroach.log</code></td><td>General CockroachDB log</td><td><code>DEV</code></td></tr><tr><td><code>cockroach-changefeed.log</code></td><td>Changefeed log</td><td><code>CHANGEFEED</code></td></tr><tr><td><code>cockroach-health.log</code></td><td>Health log</td><td><code>HEALTH</code></td></tr><tr><td><code>cockroach-kv-distribution.log</code></td><td>Data distribution log</td><td><code>KV&#95;DISTRIBUTION</code></td></tr><tr><td><code>cockroach-kv-exec.log</code></td><td>KV execution log</td><td><code>KV&#95;EXEC</code></td></tr><tr><td><code>cockroach-security.log</code></td><td>SQL security log</td><td><code>PRIVILEGES</code> + <code>USER&#95;ADMIN</code></td></tr><tr><td><code>cockroach-sql-audit.log</code></td><td>SQL access audit log</td><td><code>SENSITIVE&#95;ACCESS</code></td></tr><tr><td><code>cockroach-sql-auth.log</code></td><td>SQL authentication log</td><td><code>SESSIONS</code></td></tr><tr><td><code>cockroach-sql-exec.log</code></td><td>SQL execution log</td><td><code>SQL&#95;EXEC</code></td></tr><tr><td><code>cockroach-sql-slow.log</code></td><td>SQL slow query log</td><td><code>SQL&#95;PERF</code></td></tr><tr><td><code>cockroach-sql-schema.log</code></td><td>SQL schema change log</td><td><code>SQL&#95;SCHEMA</code></td></tr><tr><td><code>cockroach-pebble.log</code></td><td>Pebble log</td><td><code>STORAGE</code></td></tr><tr><td><code>cockroach-telemetry.log</code></td><td>Telemetry log</td><td><code>TELEMETRY</code></td></tr></tbody></table>

Logging destinations and many other parameters are configurable via YAML. For details, see [Configure Logs](/docs/v25.4/configure-logs).

## See also

- [Configure logs](/docs/v25.4/configure-logs)
- [Logging Levels and Channels](/docs/v25.4/logging)
- [Log formats](/docs/v25.4/log-formats)
- [Notable Event Types](/docs/v25.4/eventlog)
